--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <i class="fab fa-android"></i>
                     <h3>Android Development</h3>
                 </div>
-                <div class="skill-item">
+                  <div class="skill-item">
                     <i class="fab fa-java"></i>
                     <h3>Java</h3>
                 </div>
@@ -114,9 +114,36 @@
                     <i class="fas fa-paint-brush"></i>
                     <h3>UI/UX Design</h3>
                 </div>
+
+                <div class="skill-item">
+                    <i class="fa-brands fa-html5"></i>
+                    <h3>HTML</h3>
+                </div>
+
+                <div class="skill-item">
+                    <i class="fa-brands fa-css3"></i>
+                    <h3>CSS</h3>
+                </div>
+
+                 <div class="skill-item">
+                    <i class="fab fa-js-square"></i>
+                    <h3>JavaScript</h3>
+                </div>
+
+
+                <div class="skill-item">
+                    <i class="fab fa-bootstrap"></i>
+                    <h3>Bootstrap</h3>
+                </div>
+
+
                 <div class="skill-item">
                     <i class="fab fa-php"></i>
                     <h3>PHP</h3>
+                </div>
+                <div class="skill-item">
+                    <i class="fab fa-laravel"></i>
+                    <h3>Laravel</h3>
                 </div>
                 <div class="skill-item">
                     <i class="fas fa-database"></i>
