--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                 </form>
                 <div class="social-links">
                     <a href="https://www.facebook.com/profile.php?id=100081907412451" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="www.linkedin.com/in/md-monjurul-ajha-030692385" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/FarimonDevelopers" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://tiktok.com/@mdmonjurulalam345" target="_blank"><i class="fab fa-tiktok"></i></a>
                     <a href="https://youtube.com/@LearnwithMonjurul" target="_blank"><i class="fab fa-youtube"></i></a>
